[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Main Menu/gameModes/agility-select.gd" type="Script" id=2]
[ext_resource path="res://Images/Text.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_color = Color( 0.952941, 0.854902, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 120
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 130
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[node name="mentalAgility" type="Control"]
margin_right = 120.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="colourGame button" type="Button" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 40.0
margin_top = 40.0
margin_right = 370.0
margin_bottom = 490.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.937255, 0.972549, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="colourGame button"]
margin_left = 4.74039
margin_top = 27.9564
margin_right = 463.74
margin_bottom = 348.956
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0156863, 0.92549, 0.0705882, 1 )
text = "Colour
Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BRTMT button" type="Button" parent="."]
margin_left = 620.0
margin_top = 100.0
margin_right = 1217.0
margin_bottom = 550.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BRTMT label" type="Label" parent="BRTMT button"]
margin_left = 4.0
margin_top = 15.0
margin_right = 593.0
margin_bottom = 440.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.0156863, 0.92549, 0.0705882, 1 )
text = "Memory
Test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backButton" type="Button" parent="."]
margin_right = 60.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 4 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="colourGame button" to="." method="colour_game_button"]
[connection signal="pressed" from="BRTMT button" to="." method="BRTMT_button"]
[connection signal="pressed" from="backButton" to="." method="back_button"]
